changed awful green

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,23 @@
   "javascript.preferences.importModuleSpecifier": "relative",
   "javascript.preferences.importModuleSpecifierEnding": "js",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#90e46f",
-    "activityBar.background": "#90e46f",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#5e83e1",
+    "activityBar.activeBackground": "#1f6fd0",
+    "activityBar.background": "#1f6fd0",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#ee90bb",
     "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#90e46f",
-    "statusBar.background": "#6fdc44",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#53c825",
-    "statusBarItem.remoteBackground": "#6fdc44",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#6fdc44",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#6fdc4499",
-    "titleBar.inactiveForeground": "#15202b99"
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#1f6fd0",
+    "statusBar.background": "#1857a4",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1f6fd0",
+    "statusBarItem.remoteBackground": "#1857a4",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#1857a4",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#1857a499",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#6fdc44",
+  "peacock.color": "#1857a4",
 }
